---------------------------------------------------------------------------------------------------
Version: 1.3.8
Date: 2022-02-?
  Changes:
      - Creep miner goes to sleep immediately on last creep tile harvested.
      - Corrosion marginal case fix
      - +0.5% corrosion DoT
---------------------------------------------------------------------------------------------------
Version: 1.3.7
Date: 2022-02-06
  Changes:
      - Balance: Electric creep miner. Added small pollution (0.5 per minute).
      - Fixed creep friction abnormal coefficient: vehicles bog down when entering creep, then get +1000% speed until driving out creep area.
      Considering other mod development to make Rampant Arsenal tanks stronger than armor mk3+shotgun vs high tier enemy bases.
      BTW spidertrone (nuclear tank-mk3 with no fuel, no problems for acceleration/braking in creep areas, crazy roof jumper) is a complete cheat and a game spoiler,
      fix is a must (via other mods)
---------------------------------------------------------------------------------------------------
Version: 1.3.6
Date: 2022-02-03
  Changes:
      - Added gfx special effects to revenge creep strikes for better understanding what is going on.
      - Hit damage and creep deploy take place only after shell lands. So moving player, car, tank and even spidertron can easily avoid creep counter attacks.
      - Fixed a few issues for creep strikes.
      - Fixed rails collision with creep. Now they can co-exist (and rails are affected by corrosion).
---------------------------------------------------------------------------------------------------
Version: 1.3.5
Date: 2022-02-01
  Changes:
      - Balance: Electric creep miner. Increased energy consumption. Added electric furnace in recipe.
      - Balance: Reduced corrosion DoT. Increased acid resistance for creep miners.
      - Balance: Doubled creep type-1 pollution absorption.