@@ -94,7 +94,7 @@ script.on_event(defines.events.on_entity_died, function(e)
     creep_eater.remove (e.entity, true)
   elseif global.corrosion.enabled and global.corrosion.strike_back
    and (e.entity.force.name == "enemy") and (e.entity.type == "unit-spawner")
-    and game.forces.enemy.evolution_factor > 0.37 then
+    and game.forces.enemy.evolution_factor > 0.38 then
      creep.check_strike(e.entity, e.cause, e.force)
   end
 end)
