@@ -301,39 +301,6 @@ railgun-shell-shooting-speed-bonus=Heavy cannon shooting speed: +__1__
 rifle-ammo-damage-bonus=Rifle damage: +__1__
 rifle-ammo-shooting-speed-bonus=Rifle shooting speed: +__1__
 
-[mod-setting-name]
-[mod-setting-description]
-kr-automation-science-pack-recipe=Choose which science pack recipe you prefer from the listed options.[color=red]\nSome recipes may be modified, because it is impossible to use the originals in certain modpacks.\n[/color][color=orange]If only Krastorio 2 is installed, Krastorio 2 recipes are recommended.[/color] (Default: Krastorio)
-kr-bonus-inventory=Slightly expands inventory by the chosen number of slots (zero mean no changes. Default value is zero).
-kr-bonus-items=Gives bonus items (some drones, car, armor and ect.) when you start new game. (Default: disabled)
-kr-cargo-wagon-bonus=Expands or reduces cargo wagon capacity (zero mean no changes. Default value is zero).
-kr-chemical-science-pack-recipe=Choose which science pack recipe you prefer from the listed options.[color=red]\nSome recipes may be modified, because it is impossible to use the originals in certain modpacks.\n[/color][color=orange]If only Krastorio 2 is installed, Krastorio 2 recipes are recommended.[/color] (Default: Krastorio)
-kr-containers=Adds medium and large storage containers. Disable to use containers from other mods (i.e. AAI Containers).
-kr-finite-oil=Makes oil finite with a constant production rate.
-kr-infinite-technology=Enable infinite upgrades for all technologies that increase a property of some in-game item and that have more than five upgrade levels. (Default: enabled)
-kr-kl-stuff=We were often asked to return the old reinforced plates. Well... you can do it with this option.
-kr-large-icons=Increases the size of the icons that display the contents in large chests and warehouses.
-kr-loaders=Adds loaders. Disable to use loaders from other mods (i.e. miniloaders).
-kr-logistic-science-pack-recipe=Choose which science pack recipe you prefer from the listed options.[color=red]\nSome recipes may be modified, because it is impossible to use the originals in certain modpacks.\n[/color][color=orange]If only Krastorio 2 is installed, Krastorio 2 recipes are recommended.[/color]
-kr-long-hands=Increases build distance, reach distance and resource reach distance (resource maxes at 4), by the specified multiplier (1 means no change).
-kr-main-menu-background=Choose which background you prefer (other mods can add backgrounds to this option).
-kr-military-science-pack-recipe=Choose which science pack recipe you prefer from the listed options.[color=red]\nSome recipes may be modified, because it is impossible to use the originals in certain modpacks.\n[/color][color=orange]If only Krastorio 2 is installed, Krastorio 2 recipes are recommended.[/color] (Default: Krastorio)
-kr-more-realistic-weapon=Adds new types of ammunition, weapons, and turrets. Bullets are physical objects that have drag and can be blocked by in-game objects. You have to aim the bullets yourself - the game will not aim for you.\n[color=orange]This is recommended to improve single player Krastorio 2 gameplay, but multiplayer latency can cause problems, since each bullet is a physical object that must be synchronized between all players.[/color] (Default: enabled)
-kr-more-realistic-weapon-auto-aim=Turn this on to re-enable automatic weapon targeting when using More Realistic Weapons. Especially useful for multiplayer, where latency can make it difficult to hit the target.
-kr-peaceful-mode=If for some reason you are playing without a biters and you want to learn all the technologies, including military, then enable this option. But be prepared that military technology will be expensive!
-kr-pipes-and-belts-changes=Increases max distances of undergroud belts and pipes.
-kr-production-science-pack-recipe=Choose which science pack recipe you prefer from the listed options.[color=red]\nSome recipes may be modified, because it is impossible to use the originals in certain modpacks.\n[/color][color=orange]If only Krastorio 2 is installed, Krastorio 2 recipes are recommended.[/color] (Default: Krastorio)
-kr-rebalance-fuels=Rebalances vanilla fuels to better match the fuels introduced by Krastorio 2. Adjusts fuel values and where they can be used.\n[color=orange]This is recommended to improve Krastorio 2 gameplay.[/color]
-kr-rebalance-radar=Rebalances radar range and energy consumption to be more balanced with the entities introduced by Krastorio 2. Also adds a MK2 radar with a larger search area.
-kr-rebalance-vehicles&fuels=Rebalances vehicle and fuel stats, changing recipes, which fuels are consumed, and fuel usage.\n[color=orange]This is recommended to improve Krastorio 2 gameplay.[/color]
-kr-re-enable-menu-simulations=Re-enables the menu simulations and deactivates Krastorio backgrounds.
-kr-shelter-tint=Changes the color of the shelter+.\n[color=cyan]This option is only for engineers who supported the development of the K2[/color]!
-kr-spidertron-exoskeleton=Allows you to put exoskeletons into spidertron equipment grids.
-kr-stack-size=Increases stack size of many vanilla and K2 items. (Default: 200)
-kr-substation-mk2=Adds Substation MK2. This is a temporary solution for those who don't have enough vanilla substations. If someday we find time to create a unique sprites for this, we will do this as a default part of K2.
-kr-utility-science-pack-recipe=Choose which science pack recipe you prefer from the listed options.[color=red]\nSome recipes may be modified, because it is impossible to use the originals in certain modpacks.\n[/color][color=orange]If only Krastorio 2 is installed, Krastorio 2 recipes are recommended.[/color] (Default: Krastorio)
-kr-vehicles-minable-changes=This option turns off the ability to pick up vehicles and trains. Option for true hardcore lovers. (Default: disabled)
-
 [other]
 additional-burner-inserter-description=__1__\nThis burner inserter can take fuel from furnaces (or any other entity) that it can reach.
 additional-inserter-description=Press __CONTROL__kr-inserter-change-lane__ to change the belt lane where the inserter will drop the item.
@@ -631,6 +598,19 @@ rocket-silo=Extremely complex machines capable of propelling themselves into orb
 
 [tooltip-category]
 shot=Thrown
+
+[mod-setting-name]
+wm-BiomassToBitersReseach=Amount of Biomass per 1 Biters Research Data item
+wm-CreepMiningPollution=Amount of Pollution generated per each Creep tile excavated
+wm-CreepMiningTilesPerCycle=Amount of Creep tiles excavated by Creep Miner per work cycle
+wm-CreepCorrosion=Enable Corrosion by Creep
+wm-CounterStrike=Enable Biter's Nests counter-strikes (requires enabled Corrosion)
+[mod-setting-description]
+wm-BiomassToBitersReseach=Recommended value is 7, but for double Technology cost value of 4 is recommended.
+wm-CreepMiningPollution=Pollution is generated at miner location. Default value is 1.5 . Reduce accordingly when pollution absorption is decreased (e.g. 0.9 for classic Deathworld map setup).
+wm-CreepMiningTilesPerCycle=Default value is 7. Don't touch it unless you know game balance.
+wm-CreepCorrosion=Any building installed on creep tiles will corrode - loose hitpoints due to acid DoT (Evolution speeds up the process!). Damage effect diminishes with structure health and stops when a few hitpoints % are left.
+wm-CounterStrike=Biters nests will counter attack with corrosion seeds sometimes when nearby nests are destroyed remotely. Minimum distance to trigger attack increases with evolution. Artillery and nuke fans - beware!
 
 [virtual-signal-name]
 kr-attention_1=Attention 1
