@@ -1,10 +1,14 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.8
-Date: 2022-02-?
+Date: 2022-03-?
   Changes:
+      - Mod settings were added. Biters reseach pack recipe default is 7. Please use value 4 for double technology price or when playing less aggressive enemies worlds.
+      To change startup setting Factorio app restart is required. Saved games will use it at next load.
       - Creep miner goes to sleep immediately on last creep tile harvested.
       - Corrosion marginal case fix
       - +0.5% corrosion DoT
+      - Less painful corrosion strikes
+      - Fixed circle render radius for creep miners
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.7
 Date: 2022-02-06
